Fixed: text-sub-container (>1920px) unnecessary margin-left and added gap between them

--- a/style.css
+++ b/style.css
@@ -251,7 +251,7 @@ nav > div > button:hover {
     border-width: 0px;
 }
 
-/* 
+/*
 Only to fix problem with navLinks for smaller screens
 caused problem with active link where 500 was overwriting 300
 */
@@ -385,6 +385,7 @@ caused problem with active link where 500 was overwriting 300
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    gap: 0 12rem;
 }
 
 @media (min-width: 640px) {
@@ -433,7 +434,6 @@ caused problem with active link where 500 was overwriting 300
     .texts-sub-conatiner {
         align-items: center;
         justify-content: space-around;
-        margin-left: 18rem;
     }
 }
 
@@ -948,7 +948,7 @@ caused problem with active link where 500 was overwriting 300
       100% {
       background-size: 100% 8px;
     }
-  
+
     50% {
       background-size: 100% 10px;
       background: linear-gradient(
